--- a/PhotoGrid/PhotoGrid.html
+++ b/PhotoGrid/PhotoGrid.html
@@ -2,27 +2,26 @@
 <html>
     <head>
         <title>
-            EspaceTours
+            B&amp;W
         </title>
-        <link href="text/css" rel="stylesheet">
+        <link href="PhotoGrid.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
 
     </head>
     <body>
-        <nav>Espace</nav>
-        <img
-         src="https://www.istockphoto.com/photo/backwaters-of-kerala-gm472909442-64456039?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fkerala&utm_term=kerala%3A%3A%3A">
-        <img src="https://www.istockphoto.com/photo/mehrangharh-fort-and-jaswant-thada-mausoleum-in-jodhpur-rajasthan-india-gm805563154-130606795?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Frajasthan&utm_term=rajasthan%3A%3A%3A">
-        <img src="https://www.istockphoto.com/photo/india-gate-gm510795912-86396781?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fdelhi&utm_term=delhi%3A%3A%3A"
-        >
-        <img
-        src="https://www.istockphoto.com/photo/bandra-worli-sea-link-gm531864277-55701756?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fmumbai&utm_term=mumbai%3A%3A%3A">
-        <img src="https://unsplash.com/photos/Rw1mRIaujQY">
-        <img src="https://unsplash.com/photos/WCgioEcEVNc">
-        <img
-        src="https://www.istockphoto.com/photo/india-goa-palolem-beach-gm535168027-57052578?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fgoa&utm_term=goa%3A%3A%3A">
-        <img src="https://unsplash.com/photos/oIXJ839p55k">
-        <img src="https://www.istockphoto.com/photo/tea-plantation-gm1160316403-317570528?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fassam&utm_term=assam%3A%3A%3A"
-        >
+        <nav>Black/White</nav>
+        
+            <img src="https://images.unsplash.com/photo-1610734828989-662704af77ab?ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHwyfHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1"><img
+             src="https://images.unsplash.com/photo-1613297095372-691ce73d91c1?ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHwzfHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1"><img
+             src="https://images.unsplash.com/photo-1450133064473-71024230f91b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHwxfHxibGFjay1hbmQtd2hpdGUtcG9ydHJhaXQlM0Z8ZW58MHx8fHwxNjQzNDY5NDE4&ixlib=rb-1.2.1&q=80&w=1080">
+            <!--2nd row-->
+            <img src="https://images.unsplash.com/photo-1610019279467-39576eb4541e?ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHw0fHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1"><img
+             src="https://images.unsplash.com/photo-1610648156742-1f003a165fa5?ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHw1fHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1"><img
+             src="https://images.unsplash.com/photo-1608641764606-4dd6ed5f0e36?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHwxfHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1&q=85">
+            <!--3rd row-->
+            <img src="https://images.unsplash.com/photo-1623085773427-d37cba8a9535?ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHw2fHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1"><img
+             src="https://images.unsplash.com/photo-1622258568408-b3480aacbdd2?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyOTU4NTZ8MHwxfHNlYXJjaHw3fHxibGFja2FuZHdoaXRlcGhvdG9ncmFwaHklM0Z8ZW58MHx8fHwxNjQzNDY1ODUx&ixlib=rb-1.2.1&q=85"><img 
+             src="https://images.unsplash.com/photo-1526289034009-0240ddb68ce3?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max">
+       
     </body>
 </html>
