--- a/FormsNavBootstrap/Forms.html
+++ b/FormsNavBootstrap/Forms.html
@@ -4,32 +4,47 @@
         <title>Form Bootstrap</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="form.css" rel="stylesheet">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
             <h1 class="display-2">Forms</h1>
             <form action="#nowhere">
-                <div class="form-row">
-                    <div class="form-group col">
+                <div class="form-group row">
+                    <div class="form-group col-md-6">
                         <label for="email"> Email </label>
                         <input type="email" class="form-control" id="mail" placeholder="#email">
                     </div>
-                    <div class="form-group col">
+                    <div class="form-group col-md-6">
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="password">
                      </div>
+                     <div class="form-group">
+                         <label for="address">Address</label>
+                         <input type="text" class="form-control" id="address" placeholder="street line buliding...">
+                     </div>
                 </div>
-
-                <div class="form-group col">
-                    <label for="state">State</label>   
-                    <select class="form-select" >
-                        <option selected>Open this select menu</option>
-                        <option value="1">Alaska</option>
-                        <option value="2">Andaman</option>
-                        <option value="3">America</option>
-                    </select>
+                <div class="form-group row">
+                     <div class="form-group col">
+                         <label for="City">City:</label>
+                         <input type="text" class="form-control" id="city">
+                     </div>
+                    <div class="form-group col">
+                        <label for="Zip Code">Zipcode</label>
+                        <input type="number" class="form-control" id="Zipcode" placeholder="12343">
+                    </div>
+                    <div class="form-group col">
+                        <label for="state">State</label>
+                        <select class="form-select">
+                            <option selected>Open this select menu</option>
+                            <option value="1">Alaska</option>
+                            <option value="2">Andaman</option>
+                            <option value="3">America</option>
+                        </select>
+                    </div>
                 </div>
+            
                 <!-- <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
@@ -42,10 +57,10 @@
                     Checked checkbox
                     </label>
                 </div> -->
-                <div class="custom-control custom-checkbox">
+                <!-- <div class="form-group custom-control custom-checkbox">
                    <input type="checkbox" class ="custom-checkbox-input" id="register">
                    <label class="custom-control-label" for="customcheck1">SignUp</label> 
-                </div>
+                </div> -->
                 <!-- <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                     <label class="form-check-label" for="flexRadioDefault1">
@@ -57,8 +72,9 @@
                     <label class="form-check-label" for="flexRadioDefault2">
                         Default checked radio
                     </label> -->
+                    <button type="submit" class="btn btn-success">register</button>
                 </div>
-
+                
             </form>
         </div>
     </body>
